# qt_projects

./: CMakeLists.txt  classes.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  models_info.txt
